applications/user-management-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-api
  namespace: mockbank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-management-api
  template:
    metadata:
      labels:
        app: user-management-api
    spec:
      containers:
      - name: user-management-api
        image: aldry1303/user-management-api:0.0.3
        ports:
        - containerPort: 8080
