applications/user-management-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-api-service
  namespace: mockbank
spec:
  selector:
    app: user-management-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
