applications/user-management-api/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: user-management-api-service-vs
  namespace: mockbank
spec:
  hosts:
  - "mockbank.bananacake.io"
  gateways:
  - mockbank-gateway
  http:
  - match:
    - uri:
        prefix: /api
    rewrite:
      uri: /$1
    route:
    - destination:
        host: user-management-api-service.mockbank.svc.cluster.local
        port:
          number: 8080
